--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.14"
 dependencies = [
     "dash>=3.3.0",
     "dash-bootstrap-components>=2.0.4",
+    "gunicorn>=23.0.0",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "plotly>=6.4.0",
+    "requests>=2.32.5",
     "websocket-client>=1.9.0",
     "websockets>=15.0.1",
 ]
