--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: ninjatrader-websocket-server
+    name: dash-trading-app
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: gunicorn app:server
     envVars:
       - key: PYTHON_VERSION
-        value: 3.14
+        value: 3.11.0
